# sTarML

./: .gitignore  LICENSE-models  MANIFEST.in  README.md  environment.yml  pyproject.toml
conda-recipe/: meta.yaml
src/starml/: cli.py  sTarML.py
src/starml/models/: mrna_kmer_scaler.pkl  mrna_kmer_vectorizer.pkl  srna_kmer_scaler.pkl  srna_kmer_vectorizer.pkl
